# gnome-enigma-emulation

./: AUTHORS  ChangeLog  NEWS  README.md  acconfig.h  config.h.in  configure.in  genigma.desktop
doc/: Makefile.am  enigma-referat.ps.bz2  example.sh
doc/C/: Makefile.am
doc/de/: Makefile.am  genigma.1
doc/en/: Makefile.am  genigma.1
po/: ChangeLog  POTFILES.in  en.po  genigma.pot  ja.po
src/: Makefile.am  Makefile.in  callbacks.c  callbacks.h  enigma.c  enigma.h  interface.c  interface.h  main.c
