dnl Process this file with autoconf to produce a configure script.

AC_INIT
AC_CONFIG_SRCDIR([src/main.c])
AM_INIT_AUTOMAKE(genigma, 1.3.0)
AM_CONFIG_HEADER(config.h)


AC_PROG_CC
AM_PROG_CC_STDC
AC_HEADER_STDC
AM_PROG_LIBTOOL

AC_ISC_POSIX

AC_CHECK_PROG( GNOME, gnome-config, 1, 0 )

if ! test $GNOME = 1 ; then
  echo "missong gnome libraries"
  exit
fi


dnl Add the languages which your application supports here.
ALL_LINGUAS="en ja"
AM_GNU_GETTEXT

EXT_LDFLAGS=$(gnome-config --libs gnomeui)
EXT_CFLAGS=$(gnome-config --cflags gnomeui)

LDFLAGS="$LDFLAGS $EXT_LDFLAGS"
CFLAGS="$CFAGS $EXT_CFLAGS"

dnl Set PACKAGE_LOCALE_DIR in config.h.
if test "x${prefix}" = "xNONE"; then
  AC_DEFINE_UNQUOTED(PACKAGE_LOCALE_DIR, "${ac_default_prefix}/${DATADIRNAME}/locale")
else
  AC_DEFINE_UNQUOTED(PACKAGE_LOCALE_DIR, "${prefix}/${DATADIRNAME}/locale")
fi

dnl Subst PACKAGE_PIXMAPS_DIR.
if test "x${prefix}" = "xNONE"; then
  PACKAGE_PIXMAPS_DIR="${ac_default_prefix}/${DATADIRNAME}/pixmaps/${PACKAGE}"
else
  PACKAGE_PIXMAPS_DIR="${prefix}/${DATADIRNAME}/pixmaps/${PACKAGE}"
fi
AC_SUBST(PACKAGE_PIXMAPS_DIR)

dnl Subst PACKAGE_PIXMAPS_DIR.
if test "x${prefix}" = "xNONE"; then
  AC_DEFINE_UNQUOTED(PACKAGE_PIXMAPS_DIR, "${ac_default_prefix}/${DATADIRNAME}/pixmaps/${PACKAGE}")
else
  AC_DEFINE_UNQUOTED(PACKAGE_PIXMAPS_DIR, "${prefix}/${DATADIRNAME}/pixmaps/${PACKAGE}")
fi

AC_CONFIG_FILES([
Makefile
src/Makefile
intl/Makefile
po/Makefile.in
doc/Makefile
doc/de/Makefile
doc/en/Makefile
doc/C/Makefile
])
AC_OUTPUT

